crates/plotnik-tests/tests/06-vm/alternations_unlabeled/error_nullable_alternatives_have_incompatible_capture_types.txt
Q = (program
  [
    {
      (comment)? @comment
    } @value :: bool
    (identifier)? @value :: bool
  ]
)
--------------------- INPUT ----------------------
------------------ DIAGNOSTICS -------------------
error: capture `@value` has incompatible types across alternatives
 --> query.ptk:5:7
  |
5 |     } @value :: bool
  |       ^^^^^^
6 |     (identifier)? @value :: bool
  |                   ------ and a different type here
  |
help: make every alternative produce the same type, or label the alternatives for a variant type
